overflow bug on entry page fixed

--- a/css/style.css
+++ b/css/style.css
@@ -239,7 +239,7 @@ main.portfolio {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  width: 100vw;
+  width: 100%;
 }
 
 .entry a {
